<resources>
    <string name="app_name">FMS</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_sign_in_with_your_email">Please sign in with your email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="dashboard">Dashboard</string>
    <string name="tournaments">Tournaments</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>
    <string name="venues">Venues</string>
    <string name="managers">Managers</string>
    <string name="referees">Referees</string>
    <string name="tournaments_image">Tournaments Image</string>
    <string name="players_image">Players Image</string>
    <string name="teams_image">Teams Image</string>
    <string name="venues_image">Venues Image</string>
    <string name="managers_image">Managers Image</string>
    <string name="referees_image">Referees Image</string>
    <string name="back">Back</string>
    <string name="tournament_image">Tournament Image</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="slash">/</string>
    <string name="_10">10</string>
    <string name="teamss">Teams:</string>
    <string name="max_teams">Max Teams</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_tournament">Create New Tournament</string>
    <string name="register_new_team">Register New Team</string>
    <string name="register_new_player">Register New Player</string>
    <string name="create_new_venue">Create New Venue</string>
    <string name="register_new_manager">Register New Manager</string>
    <string name="register_new_referee">Register New Referee</string>
    <string name="standings">Standings</string>
    <string name="fixtures">Fixtures</string>
    <string name="team_name">Team Name</string>
    <string name="capacity">Capacity:</string>
    <string name="venue_title">Venue Title</string>
    <string name="_2000">2000</string>
    <string name="venue_name">Venue Name</string>
    <string name="referee_name">Referee Name</string>
    <string name="position_number">Position Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="manager">Manager</string>
    <string name="team">Team</string>
    <string name="ok">OK</string>
    <string name="add_team">Add Team</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="admin_sign_up_password">Admin Sign Up Password</string>
    <string name="proceed">Proceed</string>
    <string name="tournament">Tournament</string>
    <string name="create_fixture">Create Fixture</string>
    <string name="venue">Venue</string>
</resources>