<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Dashboard">

    <Button
        android:id="@+id/sign_out_dashboard"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"

        app:layout_constraintBottom_toTopOf="@+id/head"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"

        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:padding="10dp"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.80">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tournament_card_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/tournament_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_above="@id/tournament_text"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/tournament"
                    android:contentDescription="@string/tournaments_image"
                    />

                <TextView
                    android:id="@+id/tournament_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="5dp"
                    android:text="@string/tournaments"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/players_card_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:strokeColor="@color/black"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/players_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_above="@id/players_text"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/players_image"
                    android:src="@drawable/player" />

                <TextView
                    android:id="@+id/players_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="5dp"
                    android:text="@string/players"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/teams_card_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:strokeColor="@color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                >

                <ImageView
                    android:id="@+id/teams_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_above="@id/teams_text"
                    android:layout_centerInParent="true"
                    android:src="@drawable/team"
                    android:contentDescription="@string/teams_image"
                    />

                <TextView
                    android:id="@+id/teams_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="5dp"
                    android:text="@string/teams"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/venue_card_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:strokeColor="@color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/venue_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_above="@id/venue_text"
                    android:layout_centerInParent="true"
                    android:src="@drawable/stadium"
                    android:contentDescription="@string/venues_image"
                    />

                <TextView
                    android:id="@+id/venue_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="5dp"
                    android:text="@string/venues"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/manager_card_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:strokeColor="@color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                >

                <ImageView
                    android:id="@+id/manager_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_above="@id/manager_text"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/managers_image"
                    android:src="@drawable/coach_1" />

                <TextView
                    android:id="@+id/manager_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="5dp"
                    android:text="@string/managers"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/referee_card_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:strokeColor="@color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                >

                <ImageView
                    android:id="@+id/referee_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_above="@id/referee_text"
                    android:layout_centerInParent="true"
                    android:src="@drawable/referee"
                    android:contentDescription="@string/referees_image"
                    />

                <TextView
                    android:id="@+id/referee_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="5dp"
                    android:text="@string/referees"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>