<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_venue_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/venue_name"
            android:layout_marginTop="25dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_venue_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textCapSentences"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_venue_capacity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capacity"
            android:layout_marginTop="25dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_venue_capacity_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            >

            <Button
                android:id="@+id/cancel_new_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                />

            <Button
                android:id="@+id/save_new_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>