<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/venue_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/venue_item_icon"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/holder_color"
                android:contentDescription="@string/tournament_image"
                android:scaleType="center"
                />



            <TextView
                android:id="@+id/venue_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/venue_item_icon"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/venue_title"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/venue_capacity_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/venue_item_name"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/capacity"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/venue_capacity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/venue_item_name"
                android:layout_toEndOf="@id/venue_capacity_head"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/_2000"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>